apps/grocy-mealie-sync/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy-mealie-sync
  namespace: grocy-mealie-sync
  labels:
    app.kubernetes.io/name: grocy-mealie-sync
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy-mealie-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy-mealie-sync
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: grocy-mealie-sync
          image: ghcr.io/harmellis/grocy-mealie-sync:1.18.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            failureThreshold: 18
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grocy-mealie-sync-data
