apps/grocy-mealie-sync/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy-mealie-sync
  namespace: grocy-mealie-sync
  labels:
    app.kubernetes.io/name: grocy-mealie-sync
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://grocy-mealie-sync.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Grocy and Mealie sync manager
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: grocy.png
    gethomepage.dev/name: Grocy Mealie Sync
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grocy-mealie-sync.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: grocy-mealie-sync
          port: http
  tls: {}
